--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,7 +59,10 @@ dependencies:
   geolocator: ^10.1.0
   #permision 
   permission_handler: ^11.0.0
-
+  #voice recognition
+  speech_to_text: ^6.3.0
+  flutter_tts: ^3.8.3
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
