--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,11 +57,13 @@ dependencies:
   google_maps_flutter: ^2.5.0
   google_places_flutter: ^2.0.6
   geolocator: ^10.1.0
+  flutter_polyline_points: ^2.0.0
   #permision 
   permission_handler: ^11.0.0
   #voice recognition
   speech_to_text: ^6.3.0
   flutter_tts: ^3.8.3
+  lottie: ^2.6.0
   
 dev_dependencies:
   flutter_test:
@@ -94,6 +96,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/animations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
