--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,8 +63,8 @@ dependencies:
   camera: ^0.10.5+5
   # tflite_flutter: ^0.10.2
   image: ^3.2.0
-  # flutter_tflite: ^1.0.1
-  tflite: ^1.1.2
+  flutter_tflite: ^1.0.1
+  # tflite: ^1.1.2
 
 dev_dependencies:
   flutter_test:
