--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,9 @@ dependencies:
   image_picker: ^1.0.2
   flutter_image_compress: ^2.0.4
   image: ^4.0.17
+  #to launch urls
+  url_launcher: ^6.1.12
+  flutter_phone_direct_caller: ^2.1.1
   
 dev_dependencies:
   flutter_test:
