--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,7 +67,7 @@ dependencies:
   image: ^3.2.0
   flutter_tflite: ^1.0.1
   # tflite: ^1.1.2
-
+  
   #voice recognition
   speech_to_text: ^6.3.0
   flutter_tts: ^3.8.3
@@ -81,6 +81,8 @@ dependencies:
   #to launch urls
   url_launcher: ^6.1.12
   flutter_phone_direct_caller: ^2.1.1
+  # Text recognition
+  google_ml_kit: ^0.16.3
   
 dev_dependencies:
   flutter_test:
