--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,7 +82,8 @@ dependencies:
   url_launcher: ^6.1.12
   flutter_phone_direct_caller: ^2.1.1
   # Text recognition
-  google_ml_kit: ^0.16.3
+  # google_ml_kit: ^0.16.3
+  google_mlkit_text_recognition: ^0.11.0
   
 dev_dependencies:
   flutter_test:
