--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,7 @@ dependencies:
   # Text recognition
   # google_ml_kit: ^0.16.3
   google_mlkit_text_recognition: ^0.11.0
+  google_sign_in: ^6.1.6
   #BLE plugins
   flutter_blue: 
     git:
